--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ adafruit-circuitpython-simpleio==3.0.2
 Adafruit-PlatformDetect==3.18.0
 Adafruit-PureIO==1.1.9
 circuitpython-stubs==7.1.0b3
+adafruit_circuitpython-lc709203f==2.2.0
 numpy==1.21.5
 Pillow==8.4.0
