--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,6 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+name: build
 
-name: Build Python application
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [ pull_request ]
 
 jobs:
   build:
@@ -20,11 +13,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.9"
+        cache: "pip"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 mpy-cross
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
