--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
-name: build
+name: test
 
-on: [ pull_request ]
+on:
+  pull_request:
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   build:
@@ -9,8 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
       with:
         python-version: "3.9"
         cache: "pip"
