--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,16 +3,17 @@ name: release
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - 'README.md'
 
 jobs:
-  build:
-
+  crosscompile:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
       with:
         python-version: "3.9"
         cache: "pip"
